# pytest-impacted

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini  usage.html
.claude/commands/: upgrade-all.md
.github/workflows/: ci-impacted.yml  ci.yml  main.yml  publish-docs.yml  publish-rust-wheels.yml  publish-to-pypi.yml
benchmarks/: bench_parsing.py
docs/: extensions.md  index.md  usage.md
docs/superpowers/plans/: 2026-07-23-impacted-packages-cli.md
docs/superpowers/specs/: 2026-07-23-impacted-packages-cli-design.md
examples/monorepo/: pyproject.toml
examples/monorepo/libs/pkg-alpha/: pyproject.toml
examples/monorepo/libs/pkg-alpha/src/pkg_alpha/: core.py  util.py
examples/monorepo/libs/pkg-alpha/tests/: test_core.py  test_util.py
examples/monorepo/libs/pkg-beta/: pyproject.toml
examples/monorepo/libs/pkg-beta/pkg_beta/: service.py
examples/monorepo/libs/pkg-beta/tests/: test_service.py
extensions/: index.html
pytest_impacted/: __init__.py  _rust.py  api.py  cli.py  extensions.py  git.py  graph.py  parsing.py  plugin.py  strategies.py  traversal.py  workspace.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
search/: search_index.json
src/pytest_affected/: display.py  git.py  graph.py  matchers.py  plugin.py  traversal.py
src/pytest_impacted/: git.py
tests/: test_affected.py  test_api.py  test_cli.py  test_display.py  test_extension_integration.py  test_extensions.py  test_git.py  test_graph.py  test_matchers.py  test_monorepo_cli.py  test_parsing.py  test_plugin.py  test_public_api.py  test_strategies.py  test_traversal.py  test_workspace.py
tests/dirwithoutiniti/: test_new.py
tests/strategies/: conftest.py  test_ast_impact.py  test_caching.py  test_composite_impact.py  test_dependency_file_impact.py  test_integration.py  test_pytest_impact.py
usage/: index.html
