[build-system]
requires = [
  "setuptools>=80.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-affected"
description = "A pytest plugin that selectively runs tests affected by codechanges via git introspection, ASL parsing, and dependency graph analysis."
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.11"
authors = [
    { name = "Adam Ever-Hadani", email = "adamhadani@gmail.com" },
]
maintainers = [
    { name = "Adam Ever-Hadani", email = "adamhadani@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "astroid>=3.3.10",
    "gitpython>=3.1.44",
    "pytest>=8.0.0",
]
[project.urls]
Repository = "https://github.com/adamhadani/pytest-affected"
[project.entry-points.pytest11]
affected = "pytest_affected.plugin"
