[build-system]
requires = [
  "setuptools>=80.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-impacted"
description = "A pytest plugin that selectively runs tests impacted by codechanges via git introspection, ASL parsing, and dependency graph analysis."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "PromptRomp", email = "promptromp.contact@gmail.com" },
]
maintainers = [
    { name = "PromptRomp", email = "promptromp.contact@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "astroid>=3.3.10",
    "gitpython>=3.1.44",
    "networkx>=3.4.2",
    "pytest>=8.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/promptromp/pytest-impacted"
Issues = "https://github.com/promptromp/pytest-impacted/issues"

[project.entry-points.pytest11]
impacted = "pytest_impacted.plugin"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mypy>=1.15.0",
    "pytest-cov>=6.1.1",
]
